// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Json Form component Render invisible condition is false 1`] = `
<span data-label="" data-server-rendered="true" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><!----> <textarea rows="1" class="textarea" style="width:100%;height:100%;resize:none;">{
  &quot;a&quot;: &quot;b&quot;
}</textarea> <!----></div></span>
`;

exports[`Json Form component Render invisible condition is true 1`] = `<div data-server-rendered="true"></div>`;

exports[`Json Form component Render invisible is True 1`] = `<div data-server-rendered="true"></div>`;

exports[`Json Form component Render invisible is false 1`] = `
<span data-label="" data-server-rendered="true" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><!----> <textarea rows="1" class="textarea" style="width:100%;height:100%;resize:none;">{
  &quot;a&quot;: &quot;b&quot;
}</textarea> <!----></div></span>
`;

exports[`Json Form component Render label 1`] = `
<span data-label="" data-server-rendered="true" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">The label</label> <textarea rows="1" class="textarea" style="width:100%;height:100%;resize:none;">{
  &quot;a&quot;: &quot;b&quot;
}</textarea> <!----></div></span>
`;

exports[`Json Form component Render mode readonly by config 1`] = `
<span data-label="" data-server-rendered="true" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><!----> <pre style="width:100%;padding:2;background-color:white;">{
  &quot;a&quot;: &quot;b&quot;
}</pre> <!----></div></span>
`;

exports[`Json Form component Render mode readonly conditional param 1`] = `
<span data-label="" data-server-rendered="true" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><!----> <pre style="width:100%;padding:2;background-color:white;">{
  &quot;a&quot;: &quot;b&quot;
}</pre> <!----></div></span>
`;

exports[`Json Form component Render mode readonly param 1`] = `
<span data-label="" data-server-rendered="true" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><!----> <pre style="width:100%;padding:2;background-color:white;">{
  &quot;a&quot;: &quot;b&quot;
}</pre> <!----></div></span>
`;

exports[`Json Form component Render placeholder 1`] = `<span data-label="" data-server-rendered="true" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><!----> <textarea placeholder="The placeholder" rows="1" class="textarea" style="width:100%;height:100%;resize:none;"></textarea> <p class="help is-danger">Invalid JSON format</p></div></span>`;

exports[`Json Form component Render required 1`] = `
<span data-label="" data-server-rendered="true" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><!----> <textarea rows="1" class="textarea" style="width:100%;height:100%;resize:none;">{
  &quot;a&quot;: &quot;b&quot;
}</textarea> <!----></div></span>
`;

exports[`Json Form component Render required conditionnal 1`] = `
<span data-label="" data-server-rendered="true" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><!----> <textarea rows="1" class="textarea" style="width:100%;height:100%;resize:none;">{
  &quot;a&quot;: &quot;b&quot;
}</textarea> <!----></div></span>
`;

exports[`Json Form component Render required without value 1`] = `<span data-label="" data-server-rendered="true" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><!----> <textarea rows="1" class="textarea" style="width:100%;height:100%;resize:none;"></textarea> <p class="help is-danger">Invalid JSON format</p></div></span>`;

exports[`Json Form component Render tooltip left 1`] = `
<span data-label="The left tooltip" data-server-rendered="true" class="is-primary is-left is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><!----> <textarea rows="1" class="textarea" style="width:100%;height:100%;resize:none;">{
  &quot;a&quot;: &quot;b&quot;
}</textarea> <!----></div></span>
`;

exports[`Json Form component Render tooltip up 1`] = `
<span data-label="The tooltip" data-server-rendered="true" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><!----> <textarea rows="1" class="textarea" style="width:100%;height:100%;resize:none;">{
  &quot;a&quot;: &quot;b&quot;
}</textarea> <!----></div></span>
`;

exports[`Json Form component Render with data 1`] = `
<span data-label="" data-server-rendered="true" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><!----> <textarea rows="1" class="textarea" style="width:100%;height:100%;resize:none;">{
  &quot;a&quot;: &quot;b&quot;
}</textarea> <!----></div></span>
`;

exports[`Json Form component Render without data 1`] = `<span data-label="" data-server-rendered="true" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><!----> <textarea rows="1" class="textarea" style="width:100%;height:100%;resize:none;"></textarea> <p class="help is-danger">Invalid JSON format</p></div></span>`;

exports[`Json Thumbnail component Render invisible condition is false 1`] = `
<span data-label="" data-server-rendered="true" class="is-primary is-top is-medium tooltip"><div class="field" style="width:inherit;"><!----> <pre style="width:100%;padding:2;background-color:white;">{
  &quot;a&quot;: &quot;b&quot;
}</pre> <!----></div></span>
`;

exports[`Json Thumbnail component Render invisible condition is true 1`] = `<div data-server-rendered="true"></div>`;

exports[`Json Thumbnail component Render invisible is True 1`] = `<div data-server-rendered="true"></div>`;

exports[`Json Thumbnail component Render invisible is false 1`] = `
<span data-label="" data-server-rendered="true" class="is-primary is-top is-medium tooltip"><div class="field" style="width:inherit;"><!----> <pre style="width:100%;padding:2;background-color:white;">{
  &quot;a&quot;: &quot;b&quot;
}</pre> <!----></div></span>
`;

exports[`Json Thumbnail component Render label 1`] = `
<span data-label="" data-server-rendered="true" class="is-primary is-top is-medium tooltip"><div class="field" style="width:inherit;"><label class="label">The label</label> <pre style="width:100%;padding:2;background-color:white;">{
  &quot;a&quot;: &quot;b&quot;
}</pre> <!----></div></span>
`;

exports[`Json Thumbnail component Render tooltip left 1`] = `
<span data-label="The left tooltip" data-server-rendered="true" class="is-primary is-left is-medium tooltip"><div class="field" style="width:inherit;"><!----> <pre style="width:100%;padding:2;background-color:white;">{
  &quot;a&quot;: &quot;b&quot;
}</pre> <!----></div></span>
`;

exports[`Json Thumbnail component Render tooltip up 1`] = `
<span data-label="The tooltip" data-server-rendered="true" class="is-primary is-top is-medium tooltip"><div class="field" style="width:inherit;"><!----> <pre style="width:100%;padding:2;background-color:white;">{
  &quot;a&quot;: &quot;b&quot;
}</pre> <!----></div></span>
`;

exports[`Json Thumbnail component Render with data 1`] = `
<span data-label="" data-server-rendered="true" class="is-primary is-top is-medium tooltip"><div class="field" style="width:inherit;"><!----> <pre style="width:100%;padding:2;background-color:white;">{
  &quot;a&quot;: &quot;b&quot;
}</pre> <!----></div></span>
`;

exports[`Json Thumbnail component Render without data 1`] = `<span data-label="" data-server-rendered="true" class="is-primary is-top is-medium tooltip"><div class="field" style="width:inherit;"><!----> <pre style="width:100%;padding:2;background-color:white;"></pre> <!----></div></span>`;

exports[`Json list component Render invisible condition is false 1`] = `
<div data-server-rendered="true">
    <pre style="width:100%;padding:2;background-color:white;">{
  &quot;a&quot;: &quot;b&quot;
}</pre>
</div>
`;

exports[`Json list component Render invisible condition is true 1`] = `<div data-server-rendered="true"><span></span></div>`;

exports[`Json list component Render invisible is True 1`] = `<div data-server-rendered="true"><span></span></div>`;

exports[`Json list component Render invisible is false 1`] = `
<div data-server-rendered="true">
    <pre style="width:100%;padding:2;background-color:white;">{
  &quot;a&quot;: &quot;b&quot;
}</pre>
</div>
`;

exports[`Json list component Render with data 1`] = `
<div data-server-rendered="true">
    <pre style="width:100%;padding:2;background-color:white;">{
  &quot;a&quot;: &quot;b&quot;
}</pre>
</div>
`;

exports[`Json list component Render without data 1`] = `
<div data-server-rendered="true">
    <pre style="width:100%;padding:2;background-color:white;"></pre>
</div>
`;
